[tool.poetry]
name = "data-version-graph"
version = "0.1.0"
description = ""
authors = ["jake-olvin <jake@olvin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.1"
mypy = "^1.10.1"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
